# fugazi-core-helium

./: .env.example  .gitignore  README.md  hardhat.config.ts  hardhat.config.ts.example  package-lock.json  package.json  pyproject.toml  run_tasks.sh
contracts/: Counter.sol  Divisooor.sol  FHERC20Mintable.sol  FakeFGZ.sol  FakeUSD.sol  FugaziAccountFacet.sol  FugaziDiamond.sol  FugaziPoolActionFacet.sol  FugaziPoolRegistryFacet.sol  FugaziStorageLayout.sol  FugaziViewerFacet.sol
contracts/interfaces/: IFHERC20.sol
contracts/libraries/: FHERC20.sol  FHERC20Mintable.sol
contracts/tokens/: FakeEUR.sol  FakeFGZ.sol  FakeUSD.sol  TokenDistributor.sol
deploy/: deploy_Counter.ts  deploy_Divisooor.ts  deploy_FHERC20Mintable.ts  deploy_Fugazi.ts  deploy_FugaziViewer.ts  deploy_Tokens.ts  deploy_counter.ts
deployments/localfhenix/: Counter.json  Divisooor.json  FakeFGZ.json  FakeUSD.json  FugaziAccountFacet.json  FugaziDiamond.json  FugaziPoolActionFacet.json  FugaziPoolRegistryFacet.json  (+1 more)
notebooks/: FMAMM_LVR_derivation.ipynb  FMAMM_batch_math.ipynb  LVR_comparison_with_fee.ipynb  LVR_comparison_without_fee.ipynb  LVR_derivation.ipynb  README.md
tasks/: DistributorClaim.ts  DistributorDeposit.ts  FugaziAddFacet.ts  FugaziAddFacets.ts  FugaziAddLiquidity.ts  FugaziCreatePool.ts  FugaziDeposit.ts  FugaziGetPoolInfo.ts  FugaziSwap.ts  FugaziViewUnclaimedOrders.ts  FugaziWithdraw.ts  addCount.ts  divCount.ts  getCount.ts  getFHERC20BalanceOfEncrypted.ts  index.ts  overrideCount.ts  unwrapFHERC20.ts  wrapFHERC20.ts
test/: README.md
types/: hardhat.d.ts  index.ts
(+71 files in other folders)
