[tool.poetry]
name = "fugazi-helium"
version = "0.1.0"
description = ""
authors = ["kosunghun317 <kosunghun317@kaist.ac.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
ipykernel = "^6.29.4"
black = {extras = ["jupyter"], version = "^24.4.2"}
pandas = "^2.2.2"
sympy = "^1.12.1"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
numba = "^0.60.0"
ing-theme-matplotlib = "^0.1.8"
ruff = {extras = ["all"], version = "^0.5.0"}
eth-ape = "^0.8.8"
python-dotenv = "^1.0.1"

[tool.ruff]
extend-include = ["*.ipynb"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
